--- a/text.html
+++ b/text.html
@@ -4,25 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-    .t{
-        max-width: auto;
-        max-height: auto;
-        size: auto;
-    }
-        
-    </style>
 </head>
-<body>div>
- <div class="t">
-    <img src="C:\Users\Acer Nitro V 15\Pictures\Camera Roll\t.jpg">
- </div>
+<body>
+    <div class="New-project">
+        
+    </div>
 
-
-
-
-
-
-
+   
 </body>
 </html>
